--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "electron-quick-start",
+  "name": "projecto",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Josue Lopez",
+  "license": "ISC",
   "devDependencies": {
-    "electron": "^8.0.3"
-  },
-  "dependencies": {
-    "bootstrap": "^4.4.1"
+    "electron": "^8.1.1"
   }
 }
